<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/item_list_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_circle_24"/>

    <TextView
        android:id="@+id/item_list_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:singleLine="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="Reunion le 10 FEV 2023"
        app:layout_constraintEnd_toStartOf="@+id/item_list_delete_button"
        app:layout_constraintStart_toEndOf="@+id/item_list_icon"
        app:layout_constraintTop_toTopOf="@+id/item_list_icon" />

    <TextView
        android:id="@+id/item_list_mails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="normal"
        tools:text="Emails"
        app:layout_constraintBottom_toBottomOf="@+id/item_list_icon"
        app:layout_constraintEnd_toStartOf="@+id/item_list_delete_button"
        app:layout_constraintStart_toEndOf="@+id/item_list_icon" />

    <ImageButton
        android:id="@+id/item_list_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/delete"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="@+id/item_list_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_list_icon"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

    <TextView
        android:id="@+id/item_list_room_number"
        android:layout_width="60dp"
        android:layout_height="60dp"
        tools:text="@string/number_of_room"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        android:translationY="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/item_list_icon"
        app:layout_constraintEnd_toEndOf="@+id/item_list_icon"
        app:layout_constraintStart_toStartOf="@+id/item_list_icon"
        app:layout_constraintTop_toTopOf="@+id/item_list_icon"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>